<resources>
    <string name="app_name">CryptoApp</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="no_connection_to_the_internet">No connection to the internet</string>
    <string name="try_again">Try Again</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="market_cap">Market cap</string>
    <string name="_24h">24H</string>
    <string name="_1w">1W</string>
    <string name="_1m">1M</string>
    <string name="_1y">1Y</string>
    <string name="all">ALL</string>
</resources>