<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.details_screen.DetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/details_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimaryVariant"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleMarginStart="12dp">

        <ImageView
            android:id="@+id/iv_details_logo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_bitcoin24" />

        <TextView
            android:id="@+id/tv_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            tools:text="@string/bitcoin"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_selected_crypto_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_toolbar" />

    <TextView
        android:id="@+id/tv_selected_crypto_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="+999.99 %"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selected_crypto_price" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selected_crypto_percent" />

    <ProgressBar
        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:max="100"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:progress="0"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/line_chart"
        app:layout_constraintEnd_toEndOf="@+id/line_chart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line_chart" />

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:divider="@drawable/divider"
        android:gravity="center"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_chart">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_24h"
            android:layout_width="48dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/my_button"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/_24h"
            android:textColor="#C4C4C4"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1w"
            android:layout_width="48dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:background="@drawable/my_button"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/_1w"
            android:textColor="#C4C4C4"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1m"
            android:layout_width="48dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:background="@drawable/my_button"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/_1m"
            android:textColor="#C4C4C4"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1y"
            android:layout_width="48dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:background="@drawable/my_button"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/_1y"
            android:textColor="#C4C4C4"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_all"
            android:layout_width="48dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:background="@drawable/my_button"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/all"
            android:textColor="#C4C4C4"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:background="#C4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_buttons" />

    <TextView
        android:id="@+id/tv_market_cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/market_cap"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tv_market_cap_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="$ 999.99 B"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_market_cap"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/tv_market_cap" />

</androidx.constraintlayout.widget.ConstraintLayout>